2012-08-13  Mikael Djurfeldt  <mikael@djurfeldt.com>

	* scheduler.cc (Scheduler::Node::advance): Define time variable
	only if debugging. Formatting changes.

	* music/data_map.hh (~DataMap::DataMap), music/event_router.hh
	(~IndexProcessor::IndexProcessor), music/index_map.hh
	(~IndexMap::IndexMap)
	(~IndexMap::IteratorImplementation::IteratorImplementation),
	music/interval.hh (~Interval::Interval), music/spatial.hh
	(~NegotiationIterator::Implementation::Implementation: Destructor
	made virtual.

	* music/collector.hh (Collector::Interval::clone),
	music/distributor.hh (Distributor::Interval::clone): Added for
	consistency.

	* event_router.cc, music/event_router.hh, music/collector.hh,
	music/distributor.hh, music/interval.hh, music/index_map.hh,
	music/interval_tree.hh: Renamed Clone --> clone throughout.

	* event_router.cc, music/event_router.hh: Renamed "spicialized"
	--> "specialized" throughout.

	* application_map.cc (ApplicationMap::assignLeaders): Only create
	ranks file if MUSIC_DEBUG is defined.

2012-08-07  Mikael Djurfeldt  <mdj@ubuntu-11.10>

	* runtime.cc (runtime.cc): Disable deletion of ports.

2012-08-03  Mikael Djurfeldt  <mdj@ubuntu-11.10>

	* music/version.hh.in: New file.

2011-01-31  Mikael Djurfeldt  <mdj@djurfeldt.com>

	* Makefile.am (libmusic_c_la_DEPENDENCIES): Added in order to
	support parallel builds.

2011-01-13  Mikael Djurfeldt  <mikael@djurfeldt.com>

	* subconnector.cc (ContInputSubconnector::receive): Update receive
	buffer pointer for subsequent receives when large packages have
	been split.

	* BIFO.cc (BIFO::insertBlock): Fixes to logic when buffer has
	wrapped around.

2010-07-28  Mikael Djurfeldt  <mikael@djurfeldt.com>

	* Release 1.0.7

	* synchronizer.cc (Synchronizer::nextCommunication): Revert
	buggy handling of tight loops in change of 2009-10-23.

	* subconnector.cc
	(MessageOutputSubconnector::MessageOutputSubconnector): Bugfix:
	Initialize synchronizer pointer properly.
