@@ -1,6 +1,6 @@
 /*
  *  This file is part of MUSIC.
- *  Copyright (C) 2007, 2008, 2009 INCF
+ *  Copyright (C) 2007, 2008, 2009, 2012 INCF
  *
  *  MUSIC is free software; you can redistribute it and/or modify
  *  it under the terms of the GNU General Public License as published by
@@ -123,7 +123,9 @@ Configuration::getEnv(char *app_name,  std::string* result)
 		mapFile.close();
 	delete[] buffer;
 #else
-	result->assign(getenv(configEnvVarName));
+	char* res = getenv (configEnvVarName);
+	if (res != NULL)
+	  result->assign (res);
 #endif
 
 }
